--- a/public/bots/brill_software/demo/index.html
+++ b/public/bots/brill_software/demo/index.html
@@ -3,15 +3,18 @@
 <head>
     <title>A CMS and Framework that uses React Components</title>
 
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="https://www.brill.software/styles.css"/>
     <link rel="canonical" href="https://www.brill.software/brill_software/demo"/>
 
     <meta name="description" content="Demonstration of the Brill Software components"/>
     <meta name="keywords"
-        content="Brill, examples, mui-datatables, React, Typescript"/>
+        content="Brill Software, mui-datatables, React CMS, Typescript CMS, Brill Components"/>
     <meta name="author" content="Chris Bulcock" />
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Brill Components">
 
     <meta property="og:title" content="Demonstration of Brill CMS React Components"/>
     <meta property="og:url" content="https://www.brill.software/brill_software/demo"/>
@@ -115,19 +118,19 @@
     <p>The end result is a better looking web site that&rsquo;s easier to maintain and didn&rsquo;t require lots of code
         to be developed. Overall a flexible &ldquo;low code&rdquo; solution.</p>
 
-        <p><a href="https://www.brill.software">Brill Software Home</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
-        <p />
+    <p><a href="https://www.brill.software">Brill Software</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
+    <p />
+    <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+    <p />
     </body>
     </html>
