--- a/public/bots/brill_software/middleware/index.html
+++ b/public/bots/brill_software/middleware/index.html
@@ -3,14 +3,17 @@
 <head>
     <title>Middleware that uses WebSockets, React and JSON</title>
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="https://www.brill.software/styles.css" />
     <link rel="canonical" href="https://www.brill.software/brill_software/middleware"/>
 
-    <meta name="description" content="Brill Software, WebSockets based Middleware" />
-    <meta name="keywords" content="Brill, Middleware, React, Java, JSON, WebSockets, REST, Message Broker">
+    <meta name="description" content="Brill Software, JSON WebSockets based Middleware" />
+    <meta name="keywords" content="Brill Software, JSON WebSockets, WebSockets Middleware, Typescript React Components, Java WebSockets, React Message Broker, REST Alternative">
     <meta name="author" content="Chris Bulcock">
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Middleware">
 
     <meta property="og:title" content="Brill Middleware | WebSockets and JSON Middleware"/>
     <meta property="og:url" content="https://www.brill.software/brill_software/middleware"/>
@@ -522,7 +525,7 @@ public class AuthenticationController {
         </li>
     </ul>
 
-    <p><a href="https://www.brill.software">Brill Software Home</a></p>
+    <p><a href="https://www.brill.software">Brill Software</a></p>
     <p />
     <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
     <p />
