--- a/public/bots/index.html
+++ b/public/bots/index.html
@@ -1,19 +1,22 @@
 <html lang="en-gb">
 
 <head>
-    <title>A CMS and Framework for creating real-time e-commerce websites</title>
+    <title>An all-on-one platform for developing Web Applications</title>
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="https://www.brill.software/styles.css" />
     <link rel="canonical" href="https://www.brill.software"/>
 
     <meta name="description"
-        content="Brill Software | A CMS and Framework for real-time e-commerce and e-learning web sites" />
+        content="Brill Software | An all-on-one platform for developing Web Applications" />
     <meta name="keywords"
-        content="Brill, Framework, React, Typescript, JSON, WebSockets, Message Broker, Spring Boot, Java, Material-ui, e-commerce"/>
+        content="Brill Software, Web Application Framework, React Typescript Components, JSON WebSockets Middleware, React Message Broker, Java Spring Boot WebSockets, Material-ui CMS"/>
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <meta property="og:title" content="A CMS and Framework for creating real-time e-commerce websites"/>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Brill Software">
+
+    <meta property="og:title" content="An all-on-one platform for developing Web Applications"/>
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="Brill Software"/>
     <meta property="og:url" content="https://www.brill.software"/>
@@ -21,73 +24,37 @@
 </head>
 
 <body>
-    <h1>Brill CMS - used for creating real-time e-commerce and e-learning web sites using React Components and a Spring
-        Boot Java server</h1>
+<h3>Web Applications</h3>
+<p>The Brill CMS and Brill Framework provide an all-in-one platform that helps you develop Web Applications faster and with less effort and less risk.</p>
+<p>Developing a large complex Web Application requires a team of developers that have to write large amounts of code and integrate multiple technologies. When you want to make a simple change such as adding an extra field to a form, it typically involves a number of code changes and a release. You have to change the UI code, change the server API, change the server database access code and do a release of both the client and server.</p>
+<p>What if you could add a new field to the UI and also to the database and do it without doing a code release? How much coding effort and release time would it save? You could use a Headless CMS to reduce the number of releases you need for content changes. But then you've got to get to grips with the Headless CMS API, write more code and it still doesn't help with the server side.</p>
+<p>You could give up on coding and go for "No Code" solution. That might be acceptable if there's a "No Code" solution that covers your application area. But what if you want a custom look-and-feel with custom components and want to connect to your own internal system using an API that no one else uses?</p>
+<p>With the Brill CMS and Brill Framework, the objective is to allow you to doing anything you could do using code, but to provide a platform to help you get things done quicker, with less effort and less releases. Its a "Low Code" solution, rather than a "No Code" solution. You will need to write code for custom React UI components, field validation and server side business logic, but it will be a lot less coding than doing everything yourself.</p>
+<h3>Technologies</h3>
+<p>We use React and TypeScript for the client and Java and Spring Boot for the server. Any existing React Components you might have can be brought into the Brill CMS. You can also make use of any Java business logic you might have on the server side.</p>
+<h4>Open Source</h4>
+<p>We'd made the Brill Framework source code available for download and inspection. The Brill Framework is distributed under the MIT license. You can run the code on your own in-premise server or on a cloud server, totally under your control. There are no per server license fees or SaaS fees and your not reliant on Brill Software.</p>
+<p>The source code for the Brill CMS is also available for download and inspection. The Brill CMS is a licensed product for which there's a per user charge. We need to make some money somehow, to pay for more development. If you don't want to use the Brill CMS, you can still use the Brill Framework and use Visual Studio Code as your CMS.</p>
 
-    <h2>Brill Software</h2>
-    <p>Brill Software is a start-up company that is developing a CMS and Framework for creating real-time transactional
-        and e-commerce web sites. Real-time means pages are updated immediately. Transactional websites are ones where
-        the user performs a transaction such as transferring money between bank accounts or booking a vaccination. The
-        CMS and Framework are aimed at developers and organisations that wish to develop their own Intranet and Internet
-        sites and also companies that develop websites for other people.</p>
-    <h3>What&rsquo;s different with the Brill CMS?</h3>
-    <p>Most CMS are used for creating static web sites, sometimes with an ability to support custom plug-ins. The Brill
-        CMS was built from day one to support the development of real-time web sites that interact with databases and
-        external systems. The Brill CMS provides a set of components for constructing pages but it also allows
-        developers to develop and add their own custom components.</p>
-    <h3>How can the Brill Framework help reduce costs?</h3>
-    <p>Organisations employ large teams of developers on transactional website development at significant cost. The cost
-        is high because developers spend a large amount of time writing and testing code. Code is expensive and time
-        consuming to produce. Developers also spend time selecting and integrating various technologies.</p>
-    <p>The Brill Framework provides a complete &ldquo;low code&rdquo; approach where the coding required is reduced to a
-        minimum. Large parts of an application can be created using the CMS. Coding is required for custom components,
-        field validation and server side functionality to connect to external systems.</p>
-    <p>As well as reducing initial development costs, the Brill CMS also reduces on-going maintenance costs. Many
-        changes can be made to a web site without requiring code changes or a software release. Business users are able
-        to make changes without the need for IT input. Changes can be published immediately without having to wait for
-        the next release date.</p>
-    <h3>Is the software Open Source?</h3>
-    <p>The full source code for the Brill Framework is available for download, consisting of the React Typescript Client
-        code and the Java Spring Boot Server code. The source code is distributed under the MIT license. The MIT license
-        is one of the most permissive Open Source licenses. The source code can be used freely in commercial projects.
-    </p>
-    <p>Not only is the source code provided but it&rsquo;s also documented to a high standard and designed to be easy to
-        understand, modify and re-use. There&rsquo;s not a lot of point in having the source code if it&rsquo;s really
-        complex and difficult to modify. That&rsquo;s why we&rsquo;ve put a lot of effort into the documentation and
-        design.</p>
-    <p>The communication between the client and server is using a middleware protocol we&rsquo;ve called the Brill
-        Middleware. The protocol is fully documented and can be used by anyone. We hope that one day Brill Middleware
-        will become the standard for client / server communications using WebSockets, just as REST is the standard for
-        HTTP.</p>
-    <h3>Where does the company name come from?</h3>
-    <p>Brill is short for &ldquo;brilliant&rdquo;. Rather than just develop software that meets the QA standards, we
-        want to develop software that&rsquo;s brilliant. Software that is useful, well designed, easy to understand,
-        documented, tested and developed to the very highest standards. Software that&rsquo;s &ldquo;Brill
-        Software&rdquo;.</p>
-    <h3>Is there a SaaS version of the CMS?</h3>
-    <p>There&rsquo;s not a SaaS like that provided by Wix or WordPress. A key feature we provide is the ability to
-        develop your own custom components and develop server side functionality for connecting to external systems.
-        This isn&rsquo;t something that can easily be provided in a shared SaaS environment. You can of course run the
-        Brill Server on a cloud service such as Amazon EC2 to save having your own hardware.</p>
-    <h3>What technologies does the Brill Framework use?</h3>
-    <p>The client code uses React and Typescript. The server is implemented using Java and Spring Boot. Communications
-        between the client and server is using Web Sockets and JSON messages. This website was developed using the Brill
-        Framework.</p>
-    <p />
-
-    <p><a href="https://www.brill.software">Brill Software Home</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+<p>
+<a href="http://www.brill.software">Brill Software</a></p>
+<p />
+<a href="https://www.brill.software">Brill Software</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+<p />
+    <p><a href="https://www.google.co.uk/">Google UK</a></p>
+    <p><a href="https://www.google.ie/">Google Ireland</a></p>
     <p />
 </body>
 
