--- a/public/bots/brill_software/contact_us/index.html
+++ b/public/bots/brill_software/contact_us/index.html
@@ -3,13 +3,16 @@
 <head>
     <title>Contact us for more details about our CMS and Framework</title>
 
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="https://www.brill.software/styles.css"/>
     <link rel="canonical" href="https://www.brill.software/brill_software/contact_us"/>
 
     <meta name="description" content="Brill Software - contact details"/>
-    <meta name="keywords" content="Brill Software Limited, Dublin, Ireland"/>
+    <meta name="keywords" content="Brill Software, Dublin Ireland"/>
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>  
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Contact Brill Software">
 
     <meta property="og:title" content="Contact us at Brill Software"/>
     <meta property="og:url" content="https://www.brill.software/brill_software/contact_us"/>
@@ -17,34 +20,29 @@
 </head>
 
 <body>
-    <h1>Contact Us at Brill Software - we're based in Dublin, Ireland</h1>
 
-    <p>The Brill Framework is still under development and not yet ready for release, so we&rsquo;re not ready to ship
-        the product to you just yet. But if you&rsquo;re interested in partnering with us or have some ideas or comments
-        please get in touch. </p>
-    <p>We&rsquo;re based in Dublin and always happy to hear from and work with anyone anywhere in the world.</p>
-    <p>The Founder and Technical Lead is Chris Bulcock. Please email Chris at <code>junk@icloud.com</code> or
-        send a What&rsquo;sApp message to Chris on.</p>
-    <h2>Registered Office</h2>
-    <p />
-    <p />
+    <h1>Contact Us</h1>
+    <p>The Brill Framework and Brill CMS are in Alpha release and are available to download from BitBucket, SourceForge, GitLab and GitHub.</p>
+    <p>We&rsquo;re based in Dublin, Ireland and London, UK. We're always happy to hear from and work with everyone, no matter where your from. Please drop us an email.</p>
+    <p>The Founder and Technical Lead is Chris Bulcock. Please email Chris at <code>chris.bulcock@brill.software</code></p>
     <h2>Company Registration</h2>
-    <p>Brill Software Limited is registered in Ireland as Company.</p>
+    <p>Brill Software Limited is registered in Ireland as Company No. 563737.</p>   
 
-    <p><a href="https://www.brill.software">Brill Software Home</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
-    <p />
-    <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
-    <p />
+    <p>
+        <a href="https://www.brill.software">Brill Software</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+        <p />
 </body>
 
 </html>
