Remove internal links.

--- a/public/bots/brill_software/cms/index.html
+++ b/public/bots/brill_software/cms/index.html
@@ -2,13 +2,13 @@
 
 <head>
 
-    <title>CMS for creating real-time e-commerce and e-learning websites</title>
+    <title>Brill CMS - all-in-on platform for creating Web Applications</title>
 
     <link rel="stylesheet" href="https://www.brill.software/styles.css"/>
     <link rel="canonical" href="https://www.brill.software/brill_software/cms"/>
 
     <meta name="description" content="Brill Software Content Management System (CMS)"/>
-    <meta name="keywords" content="Brill Software, Brill CMS, React CMS, WYSIWYG CMS, Material-UI Theme, MUI Theme, material-UI Component"/>
+    <meta name="keywords" content="JSON WebSockets, Brill Software, Brill CMS, React CMS, wysiwyg cms, cms wysiwyg"/>
     <meta name="author" content="Chris Bulcock"/>
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -138,21 +138,5 @@
       <li>Allows staging of specific changes or commit of all changes.</li>
       <li>Commit and push</li>
     </ul>
-
-        <p><a href="https://www.brill.software">Brill Software</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
-        <p />
-        <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
-        <p />
     </body>
-    
     </html>
