--- a/public/bots/index.html
+++ b/public/bots/index.html
@@ -1,7 +1,7 @@
 <html lang="en-gb">
 
 <head>
-    <title>An all-on-one platform for developing Web Applications</title>
+    <title>An all-in-one platform for developing React Web Applications</title>
 
     <link rel="stylesheet" href="https://www.brill.software/styles.css" />
     <link rel="canonical" href="https://www.brill.software"/>
@@ -9,14 +9,14 @@
     <meta name="description"
         content="Brill Software | An all-on-one platform for developing Web Applications" />
     <meta name="keywords"
-        content="Brill Software, Web Application Framework, React Typescript Components, JSON WebSockets Middleware, React Message Broker, Java Spring Boot WebSockets, Material-ui CMS"/>
+        content="Brill Software, brillsoftware, Web Application Framework, React Typescript Components, JSON WebSockets Middleware, React Message Broker, Java Spring Boot WebSockets, Material-ui CMS"/>
     <meta http-equiv="Cache-Control" content="max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Brill Software">
 
-    <meta property="og:title" content="An all-on-one platform for developing Web Applications"/>
+    <meta property="og:title" content="An all-on-one platform for developing React Web Applications"/>
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="Brill Software"/>
     <meta property="og:url" content="https://www.brill.software"/>
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+<h1>Brill Software</h1>
+
 <h3>Web Applications</h3>
 <p>The Brill CMS and Brill Framework provide an all-in-one platform that helps you develop Web Applications faster and with less effort and less risk.</p>
 <p>Developing a large complex Web Application requires a team of developers that have to write large amounts of code and integrate multiple technologies. When you want to make a simple change such as adding an extra field to a form, it typically involves a number of code changes and a release. You have to change the UI code, change the server API, change the server database access code and do a release of both the client and server.</p>
@@ -36,26 +38,6 @@
 <p>We'd made the Brill Framework source code available for download and inspection. The Brill Framework is distributed under the MIT license. You can run the code on your own in-premise server or on a cloud server, totally under your control. There are no per server license fees or SaaS fees and your not reliant on Brill Software.</p>
 <p>The source code for the Brill CMS is also available for download and inspection. The Brill CMS is a licensed product for which there's a per user charge. We need to make some money somehow, to pay for more development. If you don't want to use the Brill CMS, you can still use the Brill Framework and use Visual Studio Code as your CMS.</p>
 
-<p>
-<a href="http://www.brill.software">Brill Software</a></p>
-<p />
-<a href="https://www.brill.software">Brill Software</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_storybook/home">Brill Storybook</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
-<p />
-<p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
-<p />
-    <p><a href="https://www.google.co.uk/">Google UK</a></p>
-    <p><a href="https://www.google.ie/">Google Ireland</a></p>
-    <p />
 </body>
 
 </html>
