Bots site updates.

--- a/public/bots/brill_software/demo/index.html
+++ b/public/bots/brill_software/demo/index.html
@@ -118,5 +118,22 @@
     <p>The end result is a better looking web site that&rsquo;s easier to maintain and didn&rsquo;t require lots of code
         to be developed. Overall a flexible &ldquo;low code&rdquo; solution.</p>
 
+        <p><a href="https://www.brill.software/brill_software/home">Brill Software</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/pricing">Pricing</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/downloads">Downloads</a></p>
+        <p />
+        <p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+        <p />
+
     </body>
     </html>
