--- a/public/bots/brill_software/developers_guide/index.html
+++ b/public/bots/brill_software/developers_guide/index.html
@@ -435,6 +435,23 @@ server:
 <p>Then you need to check the pages using both Bing Webmaster Tools and Google Search Console. There&rsquo;s a faster turnaround using the Bing Tools. It&rsquo;s therefore suggested that you use Bing first and then move onto Google.</p>
 <p>Your search results raking will largely depend on the number of existing websites that have links to your website.</p>
 
+<p><a href="https://www.brill.software/brill_software/home">Brill Software</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/demo">Brill Demo</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/cms">Brill CMS</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/middleware">Brill Middleware</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/developers_guide">Brill Developers Guide</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/pricing">Pricing</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/downloads">Downloads</a></p>
+<p />
+<p><a href="https://www.brill.software/brill_software/contact_us">Contact Us</a></p>
+<p />
+
 </body>
 
 </html>
