BRIL-97 Reduce size of CMS screenshot.

--- a/public/bots/brill_software/cms/index.html
+++ b/public/bots/brill_software/cms/index.html
@@ -33,7 +33,7 @@
   <p>To use the CMS, a user needs to login. The user is presented with a list of applications that they own or have permission to &nbsp;access. The user can also create a new application or copy an existing application.</p>
   <p>Once an application is selected for editing, there&rsquo;s a tree on the left hand side with the pages, files and directory structure. The user can select a page or file to edit. With pages, there are number of different edit modes. Files are edited using a text editor with syntax colour highlighting. The CMS supports both a dark theme and light theme.</p>
   <p>This is a screenshot of the Brill CMS:</p>
-  <figure><img src="/Images/cms_screenshot.png" alt="CMS Screenshot"/></figure>
+  <figure><img src="/Images/cmsScreenshot.png" alt="CMS Screenshot"/></figure>
   <h2>Material UI Components</h2>
   <p>Most of the Brill UI components are based on Material-UI components. Material-UI is an open source framework that implements Google&rsquo;s Material Design and is very popular.</p>
   <p>Custom components can be developed using other frameworks such as Semantic-UI. Care is required when mixing components from different frameworks and is not generally a good idea. If your not fixed on a particular framework, stick with Material-UI and components that are compatible with Material-UI.</p>
